second commit about, properties, agent, clients testimonials, contact section done

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -4,7 +4,7 @@
 	border-radius: 10px;
 }
 #contact .title {
-	font-size: 40px;
+	font-size: 30px;
 }
 #contact .row {
 	justify-content: space-between;
@@ -47,4 +47,12 @@ textarea {
 	padding: 20px 30px;
 	width: 100%;
 	font-size: 14px;
+}
+/* ===================================RESPONSIVENESS============================================== */
+/* SMALL===========================================================*/
+@media (max-width: 600px) {
+	#contact .row {
+		flex-direction: column;
+		gap: 0px;
+	}
 }
