Realist Realty lgoin, register, forgotten password and the functionality

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -97,4 +97,9 @@
 		grid-template-columns: 100%;
 		gap: 40px;
 	}
+	#footer .bottom-row .title,
+	#footer .bottom-row .route {
+		text-align: center;
+		display: block;
+	}
 }
