Realist Realty lgoin, register, forgotten password and the functionality done

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -26,7 +26,8 @@
 .navbar .buttons {
 	gap: 20px;
 }
-.navbar .login-btn:hover {
+.navbar .btn:hover,
+.navbar .btn-menu:hover {
 	color: var(--foreground);
 }
 .navbar .menu-btn {
