--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,16 @@ body {
 	max-width: 1800px;
 	margin: auto;
 }
-
+li {
+	list-style: none;
+	text-align: center;
+	font-size: 20px;
+	margin: 10px;
+}
+li:hover {
+	color: var(--primary);
+	cursor: pointer;
+}
 p {
 	font-size: 14px;
 	line-height: 18px;
@@ -136,6 +145,7 @@ img {
 	cursor: pointer;
 }
 .btn:hover {
+	color: var(--foreground);
 	background: var(--primary);
 }
 .btn.primary {
