--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -48,14 +48,87 @@ textarea {
 	width: 100%;
 	font-size: 14px;
 }
+#contact .contact-options {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 20px;
+	margin-top: 20px;
+}
+#contact .contact-options .option {
+	background: var(--bg-secondary);
+	padding: 20px;
+	border-radius: 10px;
+	flex-direction: column;
+	border: 0.5px solid var(--border-primary);
+	transition: var(--transition);
+}
+#contact .contact-options .option:hover {
+	transform: scale(0.98);
+	background-color: var(--bg-accent);
+}
+#contact .contact-options .option .icon-wrapper {
+	width: 4rem;
+	min-width: 4rem;
+	max-width: 4rem;
+	height: 4rem;
+	min-height: 4rem;
+	max-height: 4rem;
+	font-size: 25px;
+	background: var(--bg-accent);
+}
+#contact .contact-options .option:hover .icon-wrapper {
+	color: var(--foreground);
+}
+#contact .contact-options .option .value {
+	font-size: 15px;
+}
 /* ===================================RESPONSIVENESS============================================== */
+/* MEDIUM===========================================================*/
+@media (max-width: 800px) {
+	#contact .contact-options {
+		grid-template-columns: repeat(2, 1fr);
+	}
+	#contact .contact-options .option:nth-child(3) {
+		grid-column: span 2;
+	}
+	#contact .bottom-row > .wrapper {
+		grid-template-columns: repeat(2, 1fr);
+		gap: 20px;
+	}
+}
 /* SMALL===========================================================*/
-@media (max-width: 600px) {
+@media (max-width: 500px) {
+	#contact .contact-options {
+		grid-template-columns: 100%;
+	}
+	#contact .contact-options .option:nth-child(3) {
+		grid-column: span 1;
+	}
+	#contact .bottom-row > .wrapper .column:first-child {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+	}
+	#contact .bottom-row > .wrapper {
+		grid-template-columns: 100%;
+		gap: 40px;
+	}
+	#contact .bottom-row .title,
+	#contact .bottom-row .route {
+		text-align: center;
+		display: block;
+	}
 	#contact .row {
 		flex-direction: column;
 		gap: 0px;
 	}
 	#contact .title {
 		font-size: 30px;
+	}
+	#footer .bottom-row .title,
+	#footer .bottom-row .route {
+		text-align: center;
+		display: block;
 	}
 }
