Realist authentication done, next is user and Admin profile  and the functionality

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 	--primary-accent: #4364f7;
 	--destructive: #7f1d1d;
 	--warning: #ffa500;
+	--success: #0bef53;
 	--transition: all 400ms ease;
 }
 
