--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,38 +1,8 @@
-#footer .contact-options {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	gap: 20px;
-}
-#footer .contact-options .option {
-	background: var(--bg-secondary);
-	padding: 20px;
-	border-radius: 10px;
-	flex-direction: column;
-	border: 0.5px solid var(--border-primary);
-	transition: var(--transition);
-}
-#footer .contact-options .option:hover {
-	transform: scale(0.98);
-	background-color: var(--bg-accent);
-}
-#footer .contact-options .option .icon-wrapper {
-	width: 4rem;
-	min-width: 4rem;
-	max-width: 4rem;
-	height: 4rem;
-	min-height: 4rem;
-	max-height: 4rem;
-	font-size: 25px;
-	background: var(--bg-accent);
-}
-#footer .contact-options .option:hover .icon-wrapper {
-	color: var(--foreground);
-}
-#footer .contact-options .option .value {
-	font-size: 15px;
-}
 #footer .bottom-row {
-	background: var(--bg-accent);
+	/* background: var(--bg-accent); */
+	background: linear-gradient(to bottom, transparent, var(--bg-accent));
+	border-top: 1px solid var(--bg-accent);
+	margin-top: 50px;
 }
 #footer .bottom-row > .wrapper {
 	display: grid;
@@ -68,12 +38,6 @@
 /* ===================================RESPONSIVENESS============================================== */
 /* MEDIUM===========================================================*/
 @media (max-width: 800px) {
-	#footer .contact-options {
-		grid-template-columns: repeat(2, 1fr);
-	}
-	#footer .contact-options .option:nth-child(3) {
-		grid-column: span 2;
-	}
 	#footer .bottom-row > .wrapper {
 		grid-template-columns: repeat(2, 1fr);
 		gap: 20px;
@@ -81,12 +45,6 @@
 }
 /* SMALL===========================================================*/
 @media (max-width: 500px) {
-	#footer .contact-options {
-		grid-template-columns: 100%;
-	}
-	#footer .contact-options .option:nth-child(3) {
-		grid-column: span 1;
-	}
 	#footer .bottom-row > .wrapper .column:first-child {
 		display: flex;
 		justify-content: center;
