--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -94,10 +94,16 @@
 	.navbar .menu-btn {
 		display: flex;
 	}
+	.navbar .sidebar .tablet {
+		display: none !important;
+	}
 }
 /* SMALL===========================================================*/
 @media (max-width: 500px) {
 	.navbar .login-btn {
 		display: none;
+	}
+	.navbar .sidebar .tablet {
+		display: block !important;
 	}
 }
