--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,8 @@
 	--primary-accent: #4364f7;
 	--destructive: #7f1d1d;
 	--warning: #ffa500;
-	--success: #0bef53;
+	--success: #07b13ce5;
+	--success-accent: #0bef53;
 	--transition: all 400ms ease;
 }
 
@@ -80,7 +81,11 @@ img {
 	object-fit: cover;
 	display: block;
 }
-
+.image {
+	width: 100%;
+	height: 100%;
+	border-radius: 10px;
+}
 .heading-1 {
 	font-size: 60px;
 	font-weight: 700;
