--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -7,6 +7,7 @@
 #profile .profile-container .menu {
 	padding: 20px;
 	width: 100%;
+	text-align-last: left;
 }
 
 #profile .profile-container .menu .image {
