--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -29,13 +29,13 @@
 .form-container .input-container .input {
 	display: flex;
 	width: 100%;
-	height: 30px;
+	height: 50px;
 	padding: 10px;
-	background: var(--bg-primary);
 	border-radius: 5px;
 	color: var(--foreground);
 	font-size: 14px;
 	overflow: hidden;
+	background: var(--bg-primary);
 	transition: var(--transition);
 	border: 0.5px solid var(--bg-accent);
 	resize: none;
@@ -79,13 +79,16 @@
 }
 .form-wrapper .info-container {
 	width: 50%;
-	height: 30px;
+	height: 50px;
 	padding: 0 10px;
 	display: flex;
 	gap: 20px;
 	align-items: center;
 	justify-content: space-between;
-	background: var(--bg-primary);
+	background: var(--bg-secondary);
+
+	transition: var(--transition);
+	border: 0.5px solid var(--bg-accent);
 }
 .form-wrapper .info-container .flex-center {
 	gap: 10px;
