--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -25,12 +25,14 @@
 #profile .profile-container .menu .icon {
 	display: none;
 }
+#profile .profile-container .admin-menu .disabled,
 #profile .profile-container .menu .disabled {
 	border-radius: 5px;
 	padding: 5px;
 	font-size: 14px;
 	text-align-last: left;
 }
+#profile .profile-container .admin-menu .active,
 #profile .profile-container .menu .active {
 	background: var(--bg-accent);
 	color: var(--foreground);
@@ -38,7 +40,14 @@
 	border-radius: 5px;
 	padding: 5px;
 }
-
+.verify {
+	margin-bottom: 10px;
+	color: var(--foreground);
+}
+.verify:hover {
+	color: var(--primary);
+	cursor: pointer;
+}
 /* ===================================RESPONSIVENESS============================================== */
 /* MEDIUM===========================================================*/
 @media (max-width: 900px) {
