--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -1,10 +1,3 @@
-.register-container {
-	height: 100vh;
-	width: 100%;
-	text-align: center;
-	margin-bottom: 100px;
-}
-
 .form-container {
 	display: flex;
 	width: 100%;
@@ -43,10 +36,10 @@
 	font-size: 14px;
 	margin-top: 20px;
 }
-.register-container .flex-center {
+.form-wrapper .flex-center {
 	gap: 10px;
 }
-.register-container .buttons-container {
+.form-wrapper .buttons-container {
 	display: flex;
 	width: 100%;
 	flex-direction: column;
@@ -55,12 +48,12 @@
 	gap: 10px;
 	margin-top: 40px;
 }
-.register-container .link {
+.form-wrapper .link {
 	color: var(--gradient);
 	text-decoration: none;
 }
 
-.register-container .link:hover {
+.form-wrapper .link:hover {
 	color: var(--foreground);
 }
 /* ===================================RESPONSIVENESS============================================== */
